proj1/tests/error/list_comprehension.py
print(['i' for i in range(len(90))])